--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/BlackandWhiteModernCleanMinimalistCreativeTechnologyLogo_20240505_113528_0000.png"
+		"logo": ".images/BlackandWhiteModernCleanMinimalistCreativeTechnologyLogo_20240505_113528_0000.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-bd89"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="#" class="u-image u-logo u-image-1" data-image-width="1500" data-image-height="1500">
+        <a href="#" class=".u-image u-logo u-image-1" data-image-width="1500" data-image-height="1500">
           <img src="images/BlackandWhiteModernCleanMinimalistCreativeTechnologyLogo_20240505_113528_0000.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
